# easy-accounts

./: .gitignore  .ruff.toml  MANIFEST.in  README.md  pyproject.toml
easy_account/: __init__.py  account.py  cli.py  config.py  spreadsheet.py
tests/: conftest.py  dummy_account.xlsx  test_account_spreadsheet.py  test_cli.py  test_config.py  test_spreadsheet.py
